--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,17 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>linglingyu</groupId>
-  <artifactId>SpringMVCDemo</artifactId>
+  <artifactId>sshDemo</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>SpringMVCDemo Maven Webapp</name>
+  <name>sshDemo Maven Webapp</name>
   <url>http://maven.apache.org</url>
   
   	<properties>  
 	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
-	    <spring.version>3.1.2.RELEASE</spring.version> 
+	    <spring.version>4.0.3.RELEASE</spring.version> 
 	    <log4j2-version>2.2</log4j2-version>
-	    <hibernate-version>4.3.8.Final</hibernate-version>
+	    <hibernate-version>4.3.5.Final</hibernate-version>
 	    <jackson-version>2.5.1</jackson-version>
 	</properties>  
 	
@@ -46,6 +46,12 @@
 		    <artifactId>spring-aop</artifactId>  
 		    <version>${spring.version}</version>  
 		</dependency>  
+		
+		<dependency>
+		<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 		  
 		<dependency>  
 		    <groupId>org.springframework</groupId>  
@@ -167,10 +173,17 @@
 				<artifactId>jstl</artifactId>
 				<version>1.2</version>
 		</dependency>
+		
+		<!-- mysql -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.10</version>
+</dependency>
 	
 	</dependencies>
   <build>
-    <finalName>SpringMVCDemo</finalName>
+    <finalName>sshDemo</finalName>
   </build>
 </project>
 
