all questions be resolved now。

--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -3,9 +3,9 @@
 # mysql
 #=============================
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.1.122:3306/haidian20151224?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/best?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=root
+jdbc.password=root123
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #=============================
