--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,16 @@
 	</param-value>
   </context-param>
   
+  <!-- open session filter -->
+  <filter>
+     <filter-name>openSessionInViewFilter</filter-name>
+     <filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
+     <init-param>
+        <param-name>singleSession</param-name>
+        <param-value>true</param-value>
+      </init-param>
+   </filter>
+  
   <servlet>
     <servlet-name>best</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
